--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Finance Super App</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -35,8 +35,9 @@
 
     <div id="modal-container"></div>
 
-    <script src="/app.js"></script>
-    <script src="/database.js"></script>
-    <script src="/utils.js"></script>
+    <script src="app.js"></script>
+    <script src="database.js"></script>
+    <script src="utils.js"></script>
 </body>
+
 </html>
