--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Finance Super App</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="icon" href="/Gemini_Generated_Image_in6dkiin6dkiin6d-removebg-preview.png" type="image/png">
+</head>
 </head>
 <body>
     <div class="app-container">
@@ -41,3 +43,4 @@
 </body>
 
 </html>
+
