--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finance Super App</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Finance Manager Super App</title>
+    <link rel="stylesheet" href="/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="icon" href="Gemini_Generated_Image_in6dkiin6dkiin6d-removebg-preview.png" type="image/png">
+    <link rel="icon" href="/Gemini_Generated_Image_in6dkiin6dkiin6d-removebg-preview.png" type="image/png">
 </head>
 <body>
     <div class="app-container">
         <header class="app-header">
-            <h1>🤖 FINANCE SUPER APP</h1>
+            <h1>🤖 FINANCE MANAGER SUPER APP</h1>
             <div class="total-balance" id="totalBalance">Rp 0</div>
         </header>
 
@@ -22,6 +22,7 @@
             <button class="tab-btn" data-tab="reports">📊 Reports</button>
             <button class="tab-btn" data-tab="calendar">🗓️ Calendar</button>
             <button class="tab-btn" data-tab="settings">⚙️ Settings</button>
+            <button class="tab-btn" data-tab="gold">🪙 Emas</button>
         </nav>
 
         <div class="tab-content">
@@ -31,17 +32,14 @@
             <div id="reports-tab" class="tab-pane"></div>
             <div id="calendar-tab" class="tab-pane"></div>
             <div id="settings-tab" class="tab-pane"></div>
+            <div id="gold-tab" class="tab-pane"></div>
         </div>
     </div>
 
     <div id="modal-container"></div>
 
-    <script src="app.js"></script>
-    <script src="database.js"></script>
-    <script src="utils.js"></script>
+    <script src="/app.js"></script>
+    <script src="/database.js"></script>
+    <script src="/utils.js"></script>
 </body>
-
 </html>
-
-
-
