--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Finance Manager Super App</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="icon" href="/Gemini_Generated_Image_in6dkiin6dkiin6d-removebg-preview.png" type="image/png">
+    <link rel="icon" href="Gemini_Generated_Image_in6dkiin6dkiin6d-removebg-preview.png" type="image/png">
 </head>
 <body>
     <div class="app-container">
@@ -38,8 +38,9 @@
 
     <div id="modal-container"></div>
 
-    <script src="/app.js"></script>
-    <script src="/database.js"></script>
-    <script src="/utils.js"></script>
+    <script src="app.js"></script>
+    <script src="database.js"></script>
+    <script src="utils.js"></script>
 </body>
 </html>
+
