--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <button class="tab-btn" data-tab="calendar">🗓️ Calendar</button>
             <button class="tab-btn" data-tab="settings">⚙️ Settings</button>
             <button class="tab-btn" data-tab="gold">🪙 Emas</button>
+            <button class="tab-btn" data-tab="saham">💹 Saham</button>
         </nav>
 
         <div class="tab-content">
@@ -33,6 +34,7 @@
             <div id="calendar-tab" class="tab-pane"></div>
             <div id="settings-tab" class="tab-pane"></div>
             <div id="gold-tab" class="tab-pane"></div>
+            <div id="saham-tab" class="tab-pane"></div>
         </div>
     </div>
 
