--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <button class="tab-btn" data-tab="settings">⚙️ Settings</button>
             <button class="tab-btn" data-tab="gold">🪙 Emas</button>
             <button class="tab-btn" data-tab="saham">💹 Saham</button>
-        </nav>
+            <button class="tab-btn" data-tab="diabilitas">⚠️ Diabilitas</button>
+          </nav>
 
         <div class="tab-content">
             <div id="dashboard-tab" class="tab-pane active"></div>
@@ -35,6 +36,7 @@
             <div id="settings-tab" class="tab-pane"></div>
             <div id="gold-tab" class="tab-pane"></div>
             <div id="saham-tab" class="tab-pane"></div>
+            <div id="diabilitas-tab" class="tab-pane"></div>
         </div>
     </div>
 
