--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="tab-btn" data-tab="settings">⚙️ Settings</button>
             <button class="tab-btn" data-tab="gold">🪙 Emas</button>
             <button class="tab-btn" data-tab="saham">💹 Saham</button>
-            <button class="tab-btn" data-tab="diabilitas">⚠️ Diabilitas</button>
+            <button class="tab-btn" data-tab="liabilities">🏦 Liabilitas</button>
           </nav>
 
         <div class="tab-content">
@@ -36,7 +36,7 @@
             <div id="settings-tab" class="tab-pane"></div>
             <div id="gold-tab" class="tab-pane"></div>
             <div id="saham-tab" class="tab-pane"></div>
-            <div id="diabilitas-tab" class="tab-pane"></div>
+            <div id="liabilities-tab" class="tab-pane"></div>
         </div>
     </div>
 
