--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Finance Manager Super App</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="icon" href="Gemini_Generated_Image_in6dkiin6dkiin6d-removebg-preview.png" type="image/png">
+    <link rel="icon" href="Gemini_Generated_Image_in6dkiin6dkiin6dkiin6dkiin6d-removebg-preview.png" type="image/png">
 </head>
 <body>
     <div class="app-container">
@@ -25,7 +25,10 @@
             <button class="tab-btn" data-tab="gold">🪙 Emas</button>
             <button class="tab-btn" data-tab="saham">💹 Saham</button>
             <button class="tab-btn" data-tab="liabilities">🏦 Liabilitas</button>
-          </nav>
+            <button class="tab-btn" data-tab="Personalisasi">🫂 Personalisasi</button>
+            <button class="tab-btn" data-tab="Net Worth">🏡 Net Worth</button>
+            <button class="tab-btn" data-tab="Kurs">💵 Kurs</button>
+        </nav>
 
         <div class="tab-content">
             <div id="dashboard-tab" class="tab-pane active"></div>
@@ -37,14 +40,30 @@
             <div id="gold-tab" class="tab-pane"></div>
             <div id="saham-tab" class="tab-pane"></div>
             <div id="liabilities-tab" class="tab-pane"></div>
+            <div id="Personalisasi" class="tab-pane"></div>
+            <div id="Net Worth" class="tab-pane"></div>
+            <div id="Kurs" class="tab-pane"></div>
         </div>
     </div>
 
-    <div id="modal-container"></div>
+<div id="modal-container"></div>
 
-    <script src="app.js"></script>
-    <script src="database.js"></script>
-    <script src="utils.js"></script>
+<div id="floating-actions-container">
+    <button class="theme-toggle" title="Toggle Dark/Light Mode">
+        <span class="icon">🌓</span>
+    </button>
+    <button class="note-toggle" id="quickNoteToggleBtn" title="Buka Catatan Cepat">
+        <span class="icon">📝</span>
+    </button>
+    <div id="quickNotePopup" class="quick-note-popup hidden">
+        <div class="quick-note-header">
+            <h4>📝 Catatan Cepat</h4>
+            <button class="btn btn-sm btn-primary" id="saveQuickNoteBtn">Simpan</button>
+        </div>
+        <textarea id="quickNoteContent" placeholder="Tulis catatan Anda di sini..."></textarea>
+    </div>
+</div>
+    
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
-
