--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
             <button class="tab-btn" data-tab="settings">⚙️ Settings</button>
             <button class="tab-btn" data-tab="gold">🪙 Emas</button>
             <button class="tab-btn" data-tab="saham">💹 Saham</button>
-            <button class="tab-btn" data-tab="liabilities">🏦 Liabilitas</button>
-            <button class="tab-btn" data-tab="Personalisasi">🫂 Personalisasi</button>
-            <button class="tab-btn" data-tab="Net Worth">🏡 Net Worth</button>
-            <button class="tab-btn" data-tab="Kurs">💵 Kurs</button>
+            <button class="tab-btn" data-tab="personalisasi">🫂 Personalisasi</button>
+            <button class="tab-btn" data-tab="networth">🏡 Net Worth</button>
+            <button class="tab-btn" data-tab="kurs">💵 Kurs</button>
         </nav>
 
         <div class="tab-content">
@@ -40,9 +39,9 @@
             <div id="gold-tab" class="tab-pane"></div>
             <div id="saham-tab" class="tab-pane"></div>
             <div id="liabilities-tab" class="tab-pane"></div>
-            <div id="Personalisasi" class="tab-pane"></div>
-            <div id="Net Worth" class="tab-pane"></div>
-            <div id="Kurs" class="tab-pane"></div>
+            <div id="personalisasi-tab" class="tab-pane"></div>
+            <div id="networth-tab" class="tab-pane"></div>
+            <div id="kurs-tab" class="tab-pane"></div>
         </div>
     </div>
 
@@ -67,4 +66,5 @@
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
+
 
