--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <button class="tab-btn" data-tab="settings">⚙️ Settings</button>
             <button class="tab-btn" data-tab="gold">🪙 Emas</button>
             <button class="tab-btn" data-tab="saham">💹 Saham</button>
+            <button class="tab-btn" data-tab="liabilities">🏦 Liabilitas</button>
             <button class="tab-btn" data-tab="personalisasi">🫂 Personalisasi</button>
             <button class="tab-btn" data-tab="networth">🏡 Net Worth</button>
             <button class="tab-btn" data-tab="kurs">💵 Kurs</button>
