--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <header class="app-header">
             <h1>🤖 FINANCE MANAGER SUPER APP</h1>
             <div class="total-balance" id="totalBalance">Rp 0</div>
+            <div class="news-ticker-container" id="newsTickerContainer"></div>
         </header>
 
         <nav class="tab-navigation">
@@ -67,5 +68,6 @@
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
+
 
 
