--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Finance Manager Super App</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="icon" href="Gemini_Generated_Image_in6dkiin6dkiin6d-removebg-preview.png" type="image/png">
+    <link rel="icon" href="favicon.jpg" type="image/png">
 </head>
 <body>
     <div class="app-container">
@@ -68,6 +68,7 @@
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
