--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
-    <link rel="icon" href="IMG_20251014_120212.png" type="image/png">
+    <link rel="icon" href="favicon.jpg" type="image/png">
 </head>
 <body>
     <div class="app-container">
@@ -66,4 +66,5 @@
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
+
 
